--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                                     <p class="impressum-title"><strong>Impressum</strong></p>
                                     <p class="impressum-line">
                                         QQ Miteinander gGmbH (in Gründung)<br>
-                                        Cronbergstraße 6<br>
+                                        c/o Tauberwerk Coworking<br>
+                                        Poststraße 5<br>
                                         97980 Bad Mergentheim
                                     </p>
                                     <p class="impressum-line">
